--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello world!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Munich, Germany</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking, Biking, and Walking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>App Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver,CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to get out of the kitchen and learn some new skills</p>
     </section>
 
     <footer id="footer">
